Fix selector to target main image on iPhone

--- a/code/less/template.less
+++ b/code/less/template.less
@@ -2510,7 +2510,7 @@ div {
 
 .is_iphone.v_8,
 .is_iphone.v_9{
-    #bg-header .full-width {
+    #featured .full-width {
         height: 100%;
         width: auto !important;
         max-width: none !important;
